--- a/wp7-donor/Donor/Resources/AppResources.resx
+++ b/wp7-donor/Donor/Resources/AppResources.resx
@@ -117,13 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="DonorsText" xml:space="preserve">
-    <value>Доноры</value>
-  </data>
-  <data name="NameText" xml:space="preserve">
-    <value>Имя</value>
-  </data>
-  <data name="ProfileText" xml:space="preserve">
-    <value>Профиль</value>
+  <data name="EnterToWorkWithCalendar" xml:space="preserve">
+    <value>Пожалуйста войдите, чтобы иметь возможность работать с календарем событий.</value>
   </data>
 </root>
