--- a/wp7-donor/Donor/Resources/AppResources.resx
+++ b/wp7-donor/Donor/Resources/AppResources.resx
@@ -444,4 +444,7 @@
   <data name="ReadQrCode" xml:space="preserve">
     <value>Считать QR код</value>
   </data>
+  <data name="FacebookUnlinkedMessage" xml:space="preserve">
+    <value>Связь с Facebook разорвана</value>
+  </data>
 </root>
