DWP-230, DWP-231, DWP-229, ...
DWP-230, DWP-231, DWP-229, DWP-224, DWP-228, DWP-225, DWP-227, DWP-221

--- a/wp7-donor/Donor/Resources/AppResources.resx
+++ b/wp7-donor/Donor/Resources/AppResources.resx
@@ -576,4 +576,10 @@
   <data name="YouHaveEventAtThisDay" xml:space="preserve">
     <value>На этот день у вас уже запланировано событие</value>
   </data>
+  <data name="SecondName" xml:space="preserve">
+    <value>Фамилия</value>
+  </data>
+  <data name="UserBirthday" xml:space="preserve">
+    <value>Дата рождения</value>
+  </data>
 </root>
