--- a/wp7-donor/Donor/Resources/AppResources.resx
+++ b/wp7-donor/Donor/Resources/AppResources.resx
@@ -583,6 +583,7 @@
     <value>Дата рождения</value>
   </data>
   <data name="ReadQRAboutText" xml:space="preserve">
-    <value>Считайте код с приложения к справке донора для добавления достижения в Facebook. Подробности здесь.</value>
+    <value>Для активации достижения сделайте скан QR кода с наклейки к донорской справке. &lt;a href="http://www.blood.ru"&gt;Подробнее о достижениях&lt;/a&gt;.
+Функционал дотижений доступен только в СПК ГНЦ РАМН. (http://www.blood.ru)</value>
   </data>
 </root>
