--- a/wp7-donor/Donor/Resources/AppResources.resx
+++ b/wp7-donor/Donor/Resources/AppResources.resx
@@ -586,4 +586,13 @@
     <value>Для активации достижения сделайте скан QR кода с наклейки к донорской справке. &lt;a href="http://www.blood.ru"&gt;Подробнее о достижениях&lt;/a&gt;.
 Функционал дотижений доступен только в СПК ГНЦ РАМН. (http://www.blood.ru)</value>
   </data>
+  <data name="EnterYourEmailForRestorePassword" xml:space="preserve">
+    <value>Введите ваш e-mail</value>
+  </data>
+  <data name="RestoreEmailSend" xml:space="preserve">
+    <value>На E-mail отправлено письмо с инструкцией по востановлению доступа к учетной записи.</value>
+  </data>
+  <data name="RestorePassword" xml:space="preserve">
+    <value>Востановление пароля</value>
+  </data>
 </root>
