--- a/wp7-donor/Donor/Resources/AppResources.resx
+++ b/wp7-donor/Donor/Resources/AppResources.resx
@@ -598,4 +598,10 @@
   <data name="FacebookLogin" xml:space="preserve">
     <value>Вход через Facebook</value>
   </data>
+  <data name="FacebookLinking" xml:space="preserve">
+    <value>Привязать профиль Facebook</value>
+  </data>
+  <data name="String" xml:space="preserve">
+    <value />
+  </data>
 </root>
