--- a/wp7-donor/Donor/Resources/AppResources.resx
+++ b/wp7-donor/Donor/Resources/AppResources.resx
@@ -604,4 +604,7 @@
   <data name="String" xml:space="preserve">
     <value />
   </data>
+  <data name="FacebookUnLinking" xml:space="preserve">
+    <value>Привязан профиль Facebook</value>
+  </data>
 </root>
