--- a/wp7-donor/Donor/Resources/AppResources.resx
+++ b/wp7-donor/Donor/Resources/AppResources.resx
@@ -614,6 +614,6 @@
     <value>достижения</value>
   </data>
   <data name="MyBadges" xml:space="preserve">
-    <value>мои значки</value>
+    <value>Мои значки</value>
   </data>
 </root>
