--- a/wp7-donor/Donor/Resources/AppResources.resx
+++ b/wp7-donor/Donor/Resources/AppResources.resx
@@ -619,4 +619,16 @@
   <data name="AchievesMenu" xml:space="preserve">
     <value>Достижения</value>
   </data>
+  <data name="PrivacyPolicy" xml:space="preserve">
+    <value>&lt;p&gt;Данный текст описывает, как используется информация, предоставляемая приложению.&lt;/p&gt;
+&lt;ul&gt;
+&lt;li&gt;Приложение не собирает никаких данных без вашего ведома.
+&lt;/li&gt;
+&lt;li&gt;2. Приложение не собирает и не хранит информацию, которая связана с определенным именем. Мы также делаем все возможное, чтобы обезопасить хранимые данные.
+&lt;/li&gt;
+&lt;li&gt;
+3. Принимая условия, которые включают эту политику вы соглашаетесь с данной политикой конфиденциальности.
+&lt;/li&gt;
+&lt;/ul&gt;</value>
+  </data>
 </root>
