Geolocation disable and privacy

--- a/wp7-donor/Donor/Resources/AppResources.resx
+++ b/wp7-donor/Donor/Resources/AppResources.resx
@@ -620,15 +620,48 @@
     <value>Достижения</value>
   </data>
   <data name="PrivacyPolicy" xml:space="preserve">
-    <value>&lt;p&gt;Данный текст описывает, как используется информация, предоставляемая приложению.&lt;/p&gt;
-&lt;ul&gt;
-&lt;li&gt;Приложение не собирает никаких данных без вашего ведома.
-&lt;/li&gt;
-&lt;li&gt;2. Приложение не собирает и не хранит информацию, которая связана с определенным именем. Мы также делаем все возможное, чтобы обезопасить хранимые данные.
-&lt;/li&gt;
-&lt;li&gt;
-3. Принимая условия, которые включают эту политику вы соглашаетесь с данной политикой конфиденциальности.
-&lt;/li&gt;
-&lt;/ul&gt;</value>
+    <value>&lt;p&gt;Hint Solutions PRIVACY POLICY&lt;/p&gt;
+&lt;p&gt;This site is owned and operated by Hint Solutions Your privacy on the Internet is of the utmost importance to us. At Hint Solutions, we want to make your experience online satisfying and safe.&lt;br&gt;
+Because we gather certain types of information about our users, we feel you should fully understand our policy and the terms and conditions surrounding the capture and use of that information. This privacy statement discloses what information we gather and how we use it.&lt;br&gt;
+INFORMATION Hint Solutions GATHERS AND TRACKS&lt;br&gt;
+EYES INTM gathers two types of information about users:&lt;br&gt;
+• Information that users provide through optional, voluntary submissions. These are voluntary submissions to receive our electronic newsletters, to participate in our message boards or forums, to email a friend, and from participation in polls and surveys.&lt;br&gt;
+• Information Hint Solutions gathers through aggregated tracking information derived mainly by tallying page views throughout our sites. This information allows us to better tailor our content to readers’ needs and to help our advertisers and sponsors better understand the demographics of our audience. Because Hint Solutions derives its revenue mainly from sponsorships and advertising, providing such aggregated demographic data is essential to keeping our service free to users. Under no circumstances does Hint Solutions divulge any information about an individual user to a third party.&lt;br&gt;
+Hint Solutions Gathers User Information in the Following Processes:&lt;br&gt;
+Optional Voluntary Information&lt;br&gt;
+We offer the following free services, which require some type of voluntary submission of personal information by users:&lt;br&gt;
+1. Electronic newsletters policy (Dispatches)&lt;br&gt;
+We will offer a free electronic newsletter to users. Hint Solutions gathers the email addresses of users who voluntarily subscribe. Users may remove themselves from this mailing list by following the link provided in every newsletter that points users to the subscription management page. Users can also subscribe to the newsletters at the time of registration.&lt;br&gt;
+2. Message boards/forums policy&lt;br&gt;
+Users of the site’s Message Boards and Forums must register separately for these services (both are free of charge) in order to post messages, although they needn’t register to visit the site. During registration the user is required to supply a username, password, and email address.&lt;br&gt;
+3. «E-mail this to a friend» policy&lt;br&gt;
+Our site users can choose to electronically forward a link, page, or documents to someone else by clicking «e-mail this to a friend». The user must provide their email address, as well as that of the recipient. This information is used only in the case of transmission errors and, of course, to let the recipient know who sent the email. The information is not used for any other purpose.&lt;br&gt;
+4. Polling&lt;br&gt;
+We may offer interactive polls to users so they can easily share their opinions with other users and see what our audience thinks about important issues. Opinions or other responses to polls are aggregated and are not identifiable to any particular user. Hint Solutions may use a system to «tag» users after they have voted, so they can vote only once on a particular question. This tag is not correlated with information about individual users.&lt;br&gt;
+5. Surveys&lt;br&gt;
+Hint Solutions may occasionally conduct user surveys to better target our content to our audience. We sometimes share the aggregated demographic information in these surveys with our sponsors, advertisers and partners. We never share any of this information about specific individuals with any third party.&lt;br&gt;
+Children&lt;br&gt;
+Consistent with the Federal Children’s Online Privacy Protection Act of 1998 (COPPA), we will never knowingly request personally identifiable information from anyone under the age of 13 without requesting parental consent.&lt;br&gt;
+Usage Tracking&lt;br&gt;
+Hint Solutions tracks user traffic patterns throughout all of our sites. However, we do not correlate this information with data about individual users. Hint Solutions does break down overall usage statistics according to a user’s domain name, browser type, and MIME type by reading this information from the browser string (information contained in every user’s browser).&lt;br&gt;
+Hint Solutions sometimes tracks and catalogs the search terms that users enter in our Search function, but this tracking is never associated with individual users. We use tracking information to determine which areas of our sites users like and don’t like based on traffic to those areas. We do not track what individual users read, but rather how well each page performs overall. This helps us continue to build a better service for you.&lt;br&gt;
+Cookies&lt;br&gt;
+We may place a text file called a «cookie» in the browser files of your computer. The cookie itself does not contain Personal Information although it will enable us to relate your use of this site to information that you have specifically and knowingly provided. But the only personal information a cookie can contain is information you supply yourself. A cookie can’t read data off your hard disk or read cookie files created by other sites. Hint Solutions uses cookies to track user traffic patterns (as described above). Our advertising system delivers a one-time cookie to better track ad impressions and click rates.&lt;br&gt;
+You can refuse cookies by turning them off in your browser. If you’ve set your browser to warn you before accepting cookies, you will receive the warning message with each cookie. You do not need to have cookies turned on to use this site. However, you do need cookies to participate actively in message boards, forums, polling and surveys.&lt;br&gt;
+USE OF INFORMATION&lt;br&gt;
+Hint Solutions uses any information voluntarily given by our users to enhance their experience in our network of sites, whether to provide interactive or personalized elements on the sites or to better prepare future content based on the interests of our users.&lt;br&gt;
+As stated above, we use information that users voluntarily provide in order to send out electronic newsletters and to enable users to participate in polls, surveys, message boards, and forums. We send out newsletters to subscribers on a regular schedule (depending on the newsletter), and occasionally send out special editions when we think subscribers might be particularly interested in something we are doing. Hint Solutions never shares newsletter mailing lists with any third parties, including advertisers, sponsors or partners.&lt;br&gt;
+When we use tracking information to determine which areas of our sites users like and don’t like based on traffic to those areas. We do not track what individual users read, but rather how well each page performs overall. This helps us continue to build a better service for you. We track search terms entered in Search function as one of many measures of what interests our users. But we don’t track which terms a particular user enters.&lt;br&gt;
+Hint Solutions creates aggregate reports on user demographics and traffic patterns for advertisers, sponsors and partners. This allows our advertisers to advertise more effectively, and allows our users to receive advertisements that are pertinent to their needs. Because we don’t track the usage patterns of individual users, an advertiser or sponsor will never know that a specific user clicked their ad. We will not disclose any information about any individual user except to comply with applicable law or valid legal process or to protect the personal safety of our users or the public.&lt;br&gt;
+SHARING OF THE INFORMATION&lt;br&gt;
+Hint Solutions uses the above-described information to tailor our content to suit your needs and help our advertisers better understand our audience’s demographics. This is essential to keeping our service free. We will not share information about individual users with any third party, except to comply with applicable law or valid legal process or to protect the personal safety of our users or the public.&lt;br&gt;
+SECURITY&lt;br&gt;
+Hint Solutions operates secure data networks protected by industry standard firewall and password protection systems. Our security and privacy policies are periodically reviewed and enhanced as necessary and only authorized individuals have access to the information provided by our customers.&lt;br&gt;
+OPT-OUT POLICY&lt;br&gt;
+We give users options wherever necessary and practical. Such choices include:&lt;br&gt;
+• Opting not to register to receive our electronic newsletters.&lt;br&gt;
+• Opting not to participate in certain interactive areas, which completely alleviates the need to gather any personally identifiable information from our users.&lt;br&gt;
+YOUR CONSENT&lt;br&gt;
+By using this site, you consent to the collection and use of this information by Hint Solutions If we decide to change our privacy policy, we will post those changes on this page so that you are always aware of what information we collect, how we use it, and under what circumstances we disclose it.&lt;/p&gt;</value>
   </data>
 </root>
